<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.univ_littoral.mdurieux.masquesdurieux.ModifIdentity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Identity"
        android:id="@+id/textView_label_identity"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Lastname"
        android:ems="10"
        android:id="@+id/editText_lastname"
        android:layout_below="@+id/textView_label_identity"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Firstname"
        android:ems="10"
        android:id="@+id/editText_firstname"
        android:layout_below="@+id/editText_lastname"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_phone"
        android:layout_below="@+id/editText_firstname"
        android:layout_centerHorizontal="true"
        android:text="@string/Phone_number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        android:id="@+id/button_ok"
        android:layout_below="@+id/editText_phone"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:id="@+id/button_cancel"
        android:layout_below="@+id/button_ok"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClicked"/>

</RelativeLayout>
